--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ Makefile.in
 
 /conf/janus.cfg.sample
 /conf/janus.plugin.recordplay.cfg.sample
+/conf/janus.plugin.rebroadcast.cfg.sample
 /conf/janus.plugin.streaming.cfg.sample
 /conf/janus.transport.http.cfg.sample
 /conf/janus.transport.websockets.cfg.sample
