--- a/configure.ac
+++ b/configure.ac
@@ -331,6 +331,12 @@ AC_ARG_ENABLE([plugin-recordplay],
               [],
               [enable_plugin_recordplay=yes])
 
+AC_ARG_ENABLE([plugin-rebroadcast],
+              [AS_HELP_STRING([--disable-plugin-rebroadcast],
+                              [Disable rtmp rebroadcast plugin])],
+              [],
+              [enable_plugin_rebroadcast=yes])
+
 AC_ARG_ENABLE([plugin-sip],
               [AS_HELP_STRING([--disable-plugin-sip],
                               [Disable sip plugin])],
@@ -386,6 +392,7 @@ PKG_CHECK_MODULES([OGG],
 AM_CONDITIONAL([ENABLE_PLUGIN_AUDIOBRIDGE], [test "x$enable_plugin_audiobridge" = "xyes"])
 AM_CONDITIONAL([ENABLE_PLUGIN_ECHOTEST], [test "x$enable_plugin_echotest" = "xyes"])
 AM_CONDITIONAL([ENABLE_PLUGIN_RECORDPLAY], [test "x$enable_plugin_recordplay" = "xyes"])
+AM_CONDITIONAL([ENABLE_PLUGIN_REBROADCAST], [test "x$enable_plugin_rebroadcast" = "xyes"])
 AM_CONDITIONAL([ENABLE_PLUGIN_SIP], [test "x$enable_plugin_sip" = "xyes"])
 AM_CONDITIONAL([ENABLE_PLUGIN_STREAMING], [test "x$enable_plugin_streaming" = "xyes"])
 AM_CONDITIONAL([ENABLE_PLUGIN_VIDEOCALL], [test "x$enable_plugin_videocall" = "xyes"])
@@ -492,6 +499,9 @@ AM_COND_IF([ENABLE_PLUGIN_VOICEMAIL],
 AM_COND_IF([ENABLE_PLUGIN_RECORDPLAY],
 	[echo "    Record&Play:           yes"],
 	[echo "    Record&Play:           no"])
+AM_COND_IF([ENABLE_PLUGIN_REBROADCAST],
+	[echo "    Rebroadcast:           yes"],
+	[echo "    Rebroadcast:           no"])
 AM_COND_IF([ENABLE_PLUGIN_TEXTROOM],
 	[echo "    Text Room:             yes"],
 	[echo "    Text Room:             no"])
